@@ -48,6 +48,7 @@
 #include "taggingaction.h"
 #include "tagscache.h"
 #include "searchutilities.h"
+#include "applicationsettings.h"
 
 namespace Digikam
 {
@@ -99,6 +100,15 @@ AssignNameOverlay::AssignNameOverlay(QObject* const parent)
 {
     d->filteredModel.setSourceAlbumModel(&d->tagModel);
     d->filterModel.setSourceFilterModel(&d->filteredModel);
+    // Restrict the tag properties filter model to people if configured.
+    ApplicationSettings * settings = ApplicationSettings::instance();
+    if (settings)
+    {
+        if (settings->showOnlyPersonTagsInPeopleSidebar())
+        {
+            d->filteredModel.listOnlyTagsWithProperty("person");
+        }
+    }
 }
 
 AssignNameOverlay::~AssignNameOverlay()
